global_scribble_graph_project/src/antlr_pydot/global_scribble_graphParser.py
# $ANTLR 3.1.1 C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g 2012-08-30 15:31:55

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
Before=21
After=22
ID=26
EOF=-1
PROTOCOL=17
ActivityList=6
Parallel=9
SIG=18
Activity=7
Symbol=28
MsgSig=19
T__42=42
T__43=43
T__40=40
T__41=41
T__46=46
T__47=47
T__44=44
ROLE=16
T__45=45
Continue=12
Constraint=8
T__48=48
Is=23
NO=27
WHITESPACE=29
Time=25
Choice=10
Msg=20
With=14
Block=5
Roles=15
T__30=30
T__31=31
Rec=11
T__32=32
T__33=33
T__34=34
Message=4
T__35=35
T__36=36
T__37=37
T__38=38
T__39=39
Wait=24
Interrupt=13

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "Message", "Block", "ActivityList", "Activity", "Constraint", "Parallel", "Choice", "Rec", "Continue", "Interrupt", "With", "Roles", "ROLE", "PROTOCOL", "SIG", "MsgSig", "Msg", "Before", "After", "Is", "Wait", "Time", "ID", "NO", "Symbol", "WHITESPACE", "'<'", "'>'", "','", "'('", "')'", "'role'", "'{'", "'}'", "'and'", "'from'", "'to'", "'within'", "';'", "'at'", "'or'", "'continue'", "'interruptible'", "'by'", "'with'"
]




class global_scribble_graphParser(Parser):
    grammarFileName = "C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g"
    antlr_version = version_str_to_tuple("3.1.1")
    antlr_version_str = "3.1.1"
    tokenNames = tokenNames

    def __init__(self, input, state=None):
        if state is None:
            state = RecognizerSharedState()

        Parser.__init__(self, input, state)


        self.dfa14 = self.DFA14(
            self, 14,
            eot = self.DFA14_eot,
            eof = self.DFA14_eof,
            min = self.DFA14_min,
            max = self.DFA14_max,
            accept = self.DFA14_accept,
            special = self.DFA14_special,
            transition = self.DFA14_transition
            )






                
        self._adaptor = CommonTreeAdaptor()


        
    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class protocolDef_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "protocolDef"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:38:1: protocolDef : PROTOCOL protocolName ( '<' parameters '>' )? rolesDef protocolBody -> ^( PROTOCOL protocolName rolesDef protocolBody ) ;
    def protocolDef(self, ):

        retval = self.protocolDef_return()
        retval.start = self.input.LT(1)

        root_0 = None

        PROTOCOL1 = None
        char_literal3 = None
        char_literal5 = None
        protocolName2 = None

        parameters4 = None

        rolesDef6 = None

        protocolBody7 = None


        PROTOCOL1_tree = None
        char_literal3_tree = None
        char_literal5_tree = None
        stream_30 = RewriteRuleTokenStream(self._adaptor, "token 30")
        stream_31 = RewriteRuleTokenStream(self._adaptor, "token 31")
        stream_PROTOCOL = RewriteRuleTokenStream(self._adaptor, "token PROTOCOL")
        stream_rolesDef = RewriteRuleSubtreeStream(self._adaptor, "rule rolesDef")
        stream_protocolName = RewriteRuleSubtreeStream(self._adaptor, "rule protocolName")
        stream_parameters = RewriteRuleSubtreeStream(self._adaptor, "rule parameters")
        stream_protocolBody = RewriteRuleSubtreeStream(self._adaptor, "rule protocolBody")
        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:39:2: ( PROTOCOL protocolName ( '<' parameters '>' )? rolesDef protocolBody -> ^( PROTOCOL protocolName rolesDef protocolBody ) )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:39:4: PROTOCOL protocolName ( '<' parameters '>' )? rolesDef protocolBody
                pass 
                PROTOCOL1=self.match(self.input, PROTOCOL, self.FOLLOW_PROTOCOL_in_protocolDef161) 
                if self._state.backtracking == 0:
                    stream_PROTOCOL.add(PROTOCOL1)
                self._state.following.append(self.FOLLOW_protocolName_in_protocolDef163)
                protocolName2 = self.protocolName()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_protocolName.add(protocolName2.tree)
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:39:26: ( '<' parameters '>' )?
                alt1 = 2
                LA1_0 = self.input.LA(1)

                if (LA1_0 == 30) :
                    alt1 = 1
                if alt1 == 1:
                    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:39:27: '<' parameters '>'
                    pass 
                    char_literal3=self.match(self.input, 30, self.FOLLOW_30_in_protocolDef166) 
                    if self._state.backtracking == 0:
                        stream_30.add(char_literal3)
                    self._state.following.append(self.FOLLOW_parameters_in_protocolDef168)
                    parameters4 = self.parameters()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_parameters.add(parameters4.tree)
                    char_literal5=self.match(self.input, 31, self.FOLLOW_31_in_protocolDef170) 
                    if self._state.backtracking == 0:
                        stream_31.add(char_literal5)



                self._state.following.append(self.FOLLOW_rolesDef_in_protocolDef175)
                rolesDef6 = self.rolesDef()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_rolesDef.add(rolesDef6.tree)
                self._state.following.append(self.FOLLOW_protocolBody_in_protocolDef178)
                protocolBody7 = self.protocolBody()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_protocolBody.add(protocolBody7.tree)

                # AST Rewrite
                # elements: PROTOCOL, protocolBody, rolesDef, protocolName
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 39:72: -> ^( PROTOCOL protocolName rolesDef protocolBody )
                    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:39:75: ^( PROTOCOL protocolName rolesDef protocolBody )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(stream_PROTOCOL.nextNode(), root_1)

                    self._adaptor.addChild(root_1, stream_protocolName.nextTree())
                    self._adaptor.addChild(root_1, stream_rolesDef.nextTree())
                    self._adaptor.addChild(root_1, stream_protocolBody.nextTree())

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "protocolDef"

    class protocolName_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "protocolName"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:41:1: protocolName : ID ;
    def protocolName(self, ):

        retval = self.protocolName_return()
        retval.start = self.input.LT(1)

        root_0 = None

        ID8 = None

        ID8_tree = None

        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:42:2: ( ID )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:42:4: ID
                pass 
                root_0 = self._adaptor.nil()

                ID8=self.match(self.input, ID, self.FOLLOW_ID_in_protocolName201)
                if self._state.backtracking == 0:

                    ID8_tree = self._adaptor.createWithPayload(ID8)
                    self._adaptor.addChild(root_0, ID8_tree)




                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "protocolName"

    class parameters_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "parameters"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:44:1: parameters : SIG identifier ( ',' SIG identifier )* ;
    def parameters(self, ):

        retval = self.parameters_return()
        retval.start = self.input.LT(1)

        root_0 = None

        SIG9 = None
        char_literal11 = None
        SIG12 = None
        identifier10 = None

        identifier13 = None


        SIG9_tree = None
        char_literal11_tree = None
        SIG12_tree = None

        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:45:2: ( SIG identifier ( ',' SIG identifier )* )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:45:4: SIG identifier ( ',' SIG identifier )*
                pass 
                root_0 = self._adaptor.nil()

                SIG9=self.match(self.input, SIG, self.FOLLOW_SIG_in_parameters211)
                if self._state.backtracking == 0:

                    SIG9_tree = self._adaptor.createWithPayload(SIG9)
                    self._adaptor.addChild(root_0, SIG9_tree)

                self._state.following.append(self.FOLLOW_identifier_in_parameters213)
                identifier10 = self.identifier()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    self._adaptor.addChild(root_0, identifier10.tree)
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:45:20: ( ',' SIG identifier )*
                while True: #loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == 32) :
                        alt2 = 1


                    if alt2 == 1:
                        # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:45:22: ',' SIG identifier
                        pass 
                        char_literal11=self.match(self.input, 32, self.FOLLOW_32_in_parameters218)
                        if self._state.backtracking == 0:

                            char_literal11_tree = self._adaptor.createWithPayload(char_literal11)
                            self._adaptor.addChild(root_0, char_literal11_tree)

                        SIG12=self.match(self.input, SIG, self.FOLLOW_SIG_in_parameters220)
                        if self._state.backtracking == 0:

                            SIG12_tree = self._adaptor.createWithPayload(SIG12)
                            self._adaptor.addChild(root_0, SIG12_tree)

                        self._state.following.append(self.FOLLOW_identifier_in_parameters222)
                        identifier13 = self.identifier()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            self._adaptor.addChild(root_0, identifier13.tree)


                    else:
                        break #loop2





                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "parameters"

    class rolesDef_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "rolesDef"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:47:1: rolesDef : '(' roleDef ( ',' roleDef )* ')' -> ^( Roles ( roleDef )+ ) ;
    def rolesDef(self, ):

        retval = self.rolesDef_return()
        retval.start = self.input.LT(1)

        root_0 = None

        char_literal14 = None
        char_literal16 = None
        char_literal18 = None
        roleDef15 = None

        roleDef17 = None


        char_literal14_tree = None
        char_literal16_tree = None
        char_literal18_tree = None
        stream_32 = RewriteRuleTokenStream(self._adaptor, "token 32")
        stream_33 = RewriteRuleTokenStream(self._adaptor, "token 33")
        stream_34 = RewriteRuleTokenStream(self._adaptor, "token 34")
        stream_roleDef = RewriteRuleSubtreeStream(self._adaptor, "rule roleDef")
        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:47:9: ( '(' roleDef ( ',' roleDef )* ')' -> ^( Roles ( roleDef )+ ) )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:47:11: '(' roleDef ( ',' roleDef )* ')'
                pass 
                char_literal14=self.match(self.input, 33, self.FOLLOW_33_in_rolesDef233) 
                if self._state.backtracking == 0:
                    stream_33.add(char_literal14)
                self._state.following.append(self.FOLLOW_roleDef_in_rolesDef235)
                roleDef15 = self.roleDef()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_roleDef.add(roleDef15.tree)
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:47:23: ( ',' roleDef )*
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == 32) :
                        alt3 = 1


                    if alt3 == 1:
                        # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:47:24: ',' roleDef
                        pass 
                        char_literal16=self.match(self.input, 32, self.FOLLOW_32_in_rolesDef238) 
                        if self._state.backtracking == 0:
                            stream_32.add(char_literal16)
                        self._state.following.append(self.FOLLOW_roleDef_in_rolesDef240)
                        roleDef17 = self.roleDef()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_roleDef.add(roleDef17.tree)


                    else:
                        break #loop3


                char_literal18=self.match(self.input, 34, self.FOLLOW_34_in_rolesDef244) 
                if self._state.backtracking == 0:
                    stream_34.add(char_literal18)

                # AST Rewrite
                # elements: roleDef
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 47:42: -> ^( Roles ( roleDef )+ )
                    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:47:45: ^( Roles ( roleDef )+ )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(Roles, "Roles"), root_1)

                    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:47:53: ( roleDef )+
                    if not (stream_roleDef.hasNext()):
                        raise RewriteEarlyExitException()

                    while stream_roleDef.hasNext():
                        self._adaptor.addChild(root_1, stream_roleDef.nextTree())


                    stream_roleDef.reset()

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "rolesDef"

    class roleDef_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "roleDef"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:49:1: roleDef : 'role' roleName -> ^( ROLE roleName ) ;
    def roleDef(self, ):

        retval = self.roleDef_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal19 = None
        roleName20 = None


        string_literal19_tree = None
        stream_35 = RewriteRuleTokenStream(self._adaptor, "token 35")
        stream_roleName = RewriteRuleSubtreeStream(self._adaptor, "rule roleName")
        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:49:9: ( 'role' roleName -> ^( ROLE roleName ) )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:49:11: 'role' roleName
                pass 
                string_literal19=self.match(self.input, 35, self.FOLLOW_35_in_roleDef263) 
                if self._state.backtracking == 0:
                    stream_35.add(string_literal19)
                self._state.following.append(self.FOLLOW_roleName_in_roleDef265)
                roleName20 = self.roleName()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_roleName.add(roleName20.tree)

                # AST Rewrite
                # elements: roleName
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 49:27: -> ^( ROLE roleName )
                    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:49:30: ^( ROLE roleName )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(ROLE, "ROLE"), root_1)

                    self._adaptor.addChild(root_1, stream_roleName.nextTree())

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "roleDef"

    class roleName_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "roleName"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:51:1: roleName : ID ;
    def roleName(self, ):

        retval = self.roleName_return()
        retval.start = self.input.LT(1)

        root_0 = None

        ID21 = None

        ID21_tree = None

        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:51:9: ( ID )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:51:11: ID
                pass 
                root_0 = self._adaptor.nil()

                ID21=self.match(self.input, ID, self.FOLLOW_ID_in_roleName280)
                if self._state.backtracking == 0:

                    ID21_tree = self._adaptor.createWithPayload(ID21)
                    self._adaptor.addChild(root_0, ID21_tree)




                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "roleName"

    class protocolBody_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "protocolBody"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:53:1: protocolBody : block ;
    def protocolBody(self, ):

        retval = self.protocolBody_return()
        retval.start = self.input.LT(1)

        root_0 = None

        block22 = None



        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:54:2: ( block )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:54:4: block
                pass 
                root_0 = self._adaptor.nil()

                self._state.following.append(self.FOLLOW_block_in_protocolBody289)
                block22 = self.block()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    self._adaptor.addChild(root_0, block22.tree)



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "protocolBody"

    class block_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "block"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:56:1: block : '{' activityList '}' -> ^( Block activityList ) ;
    def block(self, ):

        retval = self.block_return()
        retval.start = self.input.LT(1)

        root_0 = None

        char_literal23 = None
        char_literal25 = None
        activityList24 = None


        char_literal23_tree = None
        char_literal25_tree = None
        stream_36 = RewriteRuleTokenStream(self._adaptor, "token 36")
        stream_37 = RewriteRuleTokenStream(self._adaptor, "token 37")
        stream_activityList = RewriteRuleSubtreeStream(self._adaptor, "rule activityList")
        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:56:7: ( '{' activityList '}' -> ^( Block activityList ) )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:56:9: '{' activityList '}'
                pass 
                char_literal23=self.match(self.input, 36, self.FOLLOW_36_in_block297) 
                if self._state.backtracking == 0:
                    stream_36.add(char_literal23)
                self._state.following.append(self.FOLLOW_activityList_in_block299)
                activityList24 = self.activityList()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_activityList.add(activityList24.tree)
                char_literal25=self.match(self.input, 37, self.FOLLOW_37_in_block301) 
                if self._state.backtracking == 0:
                    stream_37.add(char_literal25)

                # AST Rewrite
                # elements: activityList
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 56:30: -> ^( Block activityList )
                    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:56:33: ^( Block activityList )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(Block, "Block"), root_1)

                    self._adaptor.addChild(root_1, stream_activityList.nextTree())

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "block"

    class timeConstraints_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "timeConstraints"
    # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:58:1: timeConstraints : timeConstraint ( 'and' timeConstraint )* -> ^( Constraint ( timeConstraint )+ ) ;
    def timeConstraints(self, ):

        retval = self.timeConstraints_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal27 = None
        timeConstraint26 = None

        timeConstraint28 = None


        string_literal27_tree = None
        stream_38 = RewriteRuleTokenStream(self._adaptor, "token 38")
        stream_timeConstraint = RewriteRuleSubtreeStream(self._adaptor, "rule timeConstraint")
        try:
            try:
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:59:2: ( timeConstraint ( 'and' timeConstraint )* -> ^( Constraint ( timeConstraint )+ ) )
                # C:\\Users\\Charlotte\\Documents\\Imperial\\course\\IndividualProject\\EssaiAntlr\\globalProtocolGraph\\global_scribble_graph.g:59:5: timeConstraint ( 'and' timeConstraint )*
                pass 
                self._state.following.append(self.FOLLOW_timeConstraint_in_timeConstraints319)
                timeConstraint26 = self.timeConstraint()

